Added C hash benchmarks and md5 benchmarks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "mojo.modularHomePath": "/Users/mzaks/.modular"
+    "mojo.modularHomePath": "/Users/mzaks/.modular",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
